# tree_similarity_extension

./: .gitignore  Cargo.toml  README.md  build.rs  tree_similarity_extension.control  trees.sql  trees.sql.xz
clib/: multiply.c
include/: apted.h  apted_tree_index.h  bracket_notation_parser.h  label_dictionary.h  node.h  string_label.h  tree_indexer.h  unit_cost_model.h
sql/: .gitattributes  query_inverted_procedure.sql  query_procedure.sql  sentiment_query_sample.sql  trees.sql.xz
src/: lib.rs  parsing.rs
src/lb/: label_intersection.rs  mod.rs  sed.rs  structural_filter.rs
src/lb/structural_filter/: filter.rs  mod.rs  operators.rs
src/lb/structural_filter/iam/: build.rs  mod.rs
src/types/: id.rs  mod.rs  node.rs  tree_arena.rs  tree_intersect.rs  tree_structural.rs
src/types/tree_internals/: errors.rs  id.rs  mod.rs  node.rs  relations.rs  siblings_range.rs  traversals.rs
src_cpp/: apted.cpp  apted_tree_index_impl.cpp  bracket_notation_parser_impl.cpp  label_dictionary_impl.cpp  node_impl.cpp  string_label_impl.cpp  tree_indexer_impl.cpp  unit_cost_model_impl.cpp
