[package]
name = "tree_similarity_extension"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_tree_similarity_extension"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg15"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]
memchr = "2.7.4"
pgrx = "=0.12.1"
rustc-hash = "2.0.0"
serde = { version = "1.0.207", features = ["derive"] }
thiserror = "1.0.63"
cxx = { version = "1.0.126", features = ["c++17"] }

[dev-dependencies]
pgrx-tests = "=0.12.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[build-dependencies]
cxx-build = "1.0"
